# ouroboros

./: .gitignore  README.md  WORLD.md  check_models.py  check_siliconflow_models.py  colab_launcher.py  debug_github.py  pyproject.toml  server_launcher.py  test_api_key.py  test_gh_issue.py  test_github.py  test_github_direct.py  test_github_token.py  test_minimax.py
ouroboros/: agent.py  compaction.py  consciousness.py  context.py  health.py  llm.py  llm_runner.py  loop.py  tool_executor.py
ouroboros/tools/: codex_tool.py  control.py  core.py  frostmem_tool.py  git.py  github.py  last30days_tool.py  mcp_bridge_tool.py  registry.py  review.py  search.py  shell.py  tech_scanner.py
prompts/: BASE.md  CONSCIOUSNESS.md  SYSTEM.md  evolution.md
supervisor/: events.py  queue.py  state.py  telegram.py  workers.py
tests/: test_smoke.py
tools/: mcp-servers.json
