[project]
name = "ouroboros"
version = "6.2.5"
description = "Self-evolving LLM agent"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Kaiwei Yang", email = "stakeswky@gmail.com"}
]
dependencies = [
  "httpx>=0.26.0",
  "python-telegram-bot>=21.0",
  "openai>=1.9.0",
  "pydantic>=2.0.0",
  "beautifulsoup4>=4.12.0",
  "markdownify>=0.11.0",
  "requests>=2.28.0",
  "fastembed>=0.2.0",
  "pillow>=10.0.0",
  "pyautogui>=0.9.0",
  "selenium>=4.15.0",
  "pyyaml>=5.4.0",
]

# Optional dependencies for additional functionality
optional-dependencies = {
  "dev" = [
    "mypy>=1.10.0",
    "flake8>=6.1.0",
    "pytest>=7.4.0",
    "ipython>=8.18.0",
    "twine>=4.0.0",
    "build>=1.0.0",
  ],
  "vision" = [
    "opencv-python>=4.9.0",
  ],
  "memory" = [
    "chromadb>=0.4.24",
    "fastembed>=0.2.0",
  ],
  "websockets" = [
    "websockets>=12.0",
  ],
}

[project.scripts]
ouroboros = "ouroboros.__main__:main"

[project.urls]
"Homepage" = "https://github.com/stakeswky/ouroboros"
"Issues" = "https://github.com/stakeswky/ouroboros/issues"
"Source" = "https://github.com/stakeswky/ouroboros"

[build-system]
requires = [
  "setuptools>=67.0",
  "wheel>=0.40.0",
]
build-backend = "setuptools.build_meta"