[project]
name = "ouroboros"
version = "6.5.1"
description = "A self-modifying AI agent"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joi", email = "joi@abstractdl.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/joi-lab/ouroboros"
Documentation = "https://joi-lab.github.io/ouroboros/"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
browser = ["playwright", "duckduckgo-search"]
vision = ["anthropic"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
